<resources>
    <string name="app_name">Contra</string>
    <string name="id">ID:</string>
    <string name="create_qr">Create QR</string>
    <string name="scan_qr">Scan QR</string>
    <string name="check_num">Check Num.</string>
    <string name="register_num">Register Num.</string>
    <string name="save_data">Save Data</string>>
    <string name="view_data">View Data</string>
    <string name="todo">TODO</string>
    <string name="view_profile">View Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
</resources>
