<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".dashboard">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="68dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/id" />

    <TableRow
        android:layout_width="wrap_content"
        android:id="@+id/table1"
        android:layout_height="93dp"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="2dp"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/createqr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:src="@mipmap/ic_createqr"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/create_qr" />

        <ImageButton
            android:id="@+id/scanqr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:paddingStart="40dp"
            android:paddingEnd="0dp"
            android:src="@mipmap/ic_scanqr"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/scan_qr" />

    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:id="@+id/table2"
        android:layout_height="93dp"
        android:layout_below="@+id/table1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="2dp"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/checknumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:src="@mipmap/ic_checknum"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/check_num" />

        <ImageButton
            android:id="@+id/registernumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:src="@mipmap/ic_registernum"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/register_num" />

    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:id="@+id/table3"
        android:layout_height="93dp"
        android:layout_below="@+id/table2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="2dp"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/savedata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:src="@mipmap/ic_savedata"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/save_data" />

        <ImageButton
            android:id="@+id/viewdata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:paddingStart="40dp"
            android:paddingEnd="0dp"
            android:src="@mipmap/ic_viewdata"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/view_data" />

    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:id="@+id/table4"
        android:layout_height="93dp"
        android:layout_below="@+id/table3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="2dp"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/viewprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:src="@mipmap/ic_profile"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/view_profile" />

        <ImageButton
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:src="@mipmap/ic_contact"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/contact_us" />

    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:id="@+id/table5"
        android:layout_height="93dp"
        android:layout_below="@+id/table4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="2dp"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:src="@mipmap/ic_help"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/help" />

        <ImageButton
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:paddingStart="70dp"
            android:paddingEnd="0dp"
            android:src="@mipmap/ic_logout"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/log_out" />

    </TableRow>

</RelativeLayout>